# Sparrow

./: .gitignore  CMakeLists.txt
Doc/: Log.md  临时.md  新建文本文档.md
Render/: Render.h
Render/Detail/: CallbackI.h  CharSet.h  CommandBuffer.h  Encoder.h  IRenderContext.h  InstanceDataBuffer.h  RenderConfig.h  RenderContext.h  RenderDebug.h  RenderDefine.h  RenderEnum.h  (+10 more)
Sparrow/: CMakeLists.txt
Sparrow/CMake/: SprrowBase.cmake
Sparrow/Include/Base/: ArrayRef.h  Config.h  Format.h  Log.h  String.h
Sparrow/Include/Core/: Config.h  Log.h  Object.h
Sparrow/Include/Core/Common/: ArrayRef.h
Sparrow/Include/Core/Config/: MathConfig.h  UtilConfig.h
Sparrow/Include/Core/Inline/: Log-spd.inl
Sparrow/Include/Core/Util/: UtilMacro.h
Sparrow/Include/FileSystem/: Directory.h  FileInfo.h  FileSystem.h  Path.h
Sparrow/Include/GPU/OpenGL/: GLContext.h  GLDebug.h  GLFrameBuffer.h  GLIndexBuffer.h  GLProgram.h  GLRenderBuffer.h  GLRequirement.h  GLShader.h  GLTexture.h  GLUniform.h  GLUtil.h  GLVertexArray.h  GLVertexBuffer.h  GLVertexLayout.h
Sparrow/Include/Math/: Color.h  Math.h  Matrix.h  Ray.h  Tramsform.h  Vector.h
Sparrow/Include/Math/Detail/: LinearData.h  LinearOperator.h  MatrixOperator.h  Matrixf.h  TMatrix.h  TVector copy.h  TVector.h  VectorBase.h  VectorOpterator.h  Vectorf.h
Sparrow/Include/Math/Inline/: LinearData-Eigen.inl  LinearData.Eigen.inl  LinearData.inl  LinearData.template  LinearData.template.cpp  LinearOperator.Eigen.inl  LinearOperator.inl  LinearOperator.template.cpp  Math.inl  MatrixOperator.inl  TMatrix-Eigen.inl  TVector-Eigen.inl  Transform-Eigen.inl  VectorBase.inl  VectorEigen.inl  VectorOperator.inl
Sparrow/Include/Render/: Callback.hpp  CallbackI.h  Encoder.h  FrameBuffer.h  IRenderContext.h  IndexBuffer.h  Platform.h  Program.h  RTemp.h  Render.h  RenderCommand.h  RenderCommandBuffer.h  RenderConfig.h  RenderContext.h  RenderDebug.h  RenderDefine.h  RenderEnum.h  RenderFunction.h  RenderHandle.h  RenderInternal.h  RenderMTL.h  RenderObject.h  RenderStruct.h  RenderStructInternal.h  RenderSysterm.h  RenderVertexLayout.h  Renderable.h  Shader.h  StaticVariable.h  Texture.h  Topology.h  VertexBuffer.h  VertexLayout.h  embedded_shader.h
Sparrow/Include/Render/Command/: IndexBufferCommand.h  VectexBufferCommand.h
Sparrow/Include/Render/HRI/DirectX/DirectX11/: RenderDirectX11.h
Sparrow/Include/Render/HRI/DirectX/DirectX12/: RenderDirectX12.h
Sparrow/Include/Render/HRI/DirectX/DirectX9/: RenderDirectX9.h
Sparrow/Include/Render/HRI/OpenGL/: RenderOpenGL.h
Sparrow/Include/Render/HRI/Vulkan/: RenderVulkan.h
Sparrow/Include/Render/HRI/Web/: RenderWebGPU.h
Sparrow/Include/Render/Help/: Bounds.h  Camera.h  CubeAtlas.hpp  DebugDraw.h  Entry.h  ImGui.h  RenderHelp.h
Sparrow/Include/Render/Help/Entry/: entry_p.h  input.h
Sparrow/Include/Render/Help/ImGui/: imgui.cpp
Sparrow/Include/Render/RenderObject/: IndexBuffer.h  RenderObject.h  Uniform.h
Sparrow/Include/Render/Renderable/: Mesh.h
Sparrow/Include/Render/Tools/Shaderc/: Shaderc.h
Sparrow/Include/Resource/: ResourceObject.h
Sparrow/Include/Util/: Singleton.h
Sparrow/Include/Window/: Window.h
Sparrow/Inline/Base/: StringFBString.inl
Sparrow/Inline/Inline/: Inline.h
Sparrow/Inline/Inline/Base/: StringFBString.inl
Sparrow/Src/FileSystem/: Directory-ghc.cpp  FileInfo-ghc.cpp
Sparrow/Src/GPU/OpenGL/: GLContext.cpp  GLDebug.cpp  GLFrameBuffer.cpp  GLIndexBuffer.cpp  GLProgram.cpp  GLRenderBuffer.cpp  GLShader.cpp  GLTexture.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp
Sparrow/Src/Math/: Math.cpp  Matrix-Base.cpp  Vector-Base.cpp  Vector-DirectXMath.cpp  Vector.cpp
Sparrow/Src/Render/: Amalgamated.cpp  Amalgamated.mm  DebugRenderDoc.cpp  EmbeddedShader.cpp  Encoder.cpp  IRenderContext.cpp  RTemp.cpp  RenderContext.cpp  RenderDebug.cpp  RenderFunction.cpp  RenderHandle.cpp  RenderMTL.mm  RenderObject.cpp  RenderPlatform.cpp  RenderStructInternal.cpp  StaticVariable.cpp  bgfx.cpp  renderer.h  shader.cpp  shader_dx9bc.cpp  shader_dxbc.cpp  shader_spirv.cpp  topology.cpp  vertexlayout.h
Sparrow/Src/Render/HRI/DirectX/: DXGI.cpp  NVIDIAAPI.cpp
Sparrow/Src/Render/HRI/DirectX/DirectX11/: RenderDirectX11.cpp
Sparrow/Src/Render/HRI/DirectX/DirectX12/: RenderDirectX12.cpp
Sparrow/Src/Render/HRI/DirectX/DirectX9/: RenderDirectX9.cpp
Sparrow/Src/Render/HRI/OpenGL/: OpenGLEAGL.mm  OpenGLEGL.cpp  OpenGLGLX.cpp  OpenGLHTML5.cpp  OpenGLNSGL.mm  OpenGLWGL.cpp  RenderOpenGL.cpp
Sparrow/Src/Render/HRI/Other/: renderer_gnm.cpp  renderer_noop.cpp  renderer_nvn.cpp
Sparrow/Src/Render/HRI/Vulkan/: RenderVulkan.cpp
Sparrow/Src/Render/HRI/Web/: RenderWebGPU.cpp
Sparrow/Src/Render/Help/: Bounds.cpp  Camera.cpp  DebugDraw.cpp  ImGui.cpp  RenderHelp.cpp
Sparrow/Src/Render/Help/Entry/: cmd.cpp  dialog.cpp  dialog_darwin.mm  entry.cpp  entry_android.cpp  entry_glfw.cpp  entry_html5.cpp  entry_ios.mm  entry_noop.cpp  entry_osx.mm  entry_sdl.cpp  entry_windows.cpp  entry_x11.cpp  input.cpp
Sparrow/Src/Render/Help/ImGui/: imgui.h
Sparrow/Src/Render/Tools/Bounds/: Bounds.cpp
Sparrow/Src/Render/Tools/Geometryc/: Geometryc.cpp
Sparrow/Src/Render/Tools/ShaderSpirv/: ShaderSpirv.cpp
Sparrow/Src/Render/Tools/Shaderc/: Shaderc.cpp  ShadercGLSL.cpp  ShadercHLSL.cpp  ShadercMetal.cpp  ShadercPssl.cpp  ShadercSpirv.cpp
Sparrow/Src/Render/Tools/Texturev/: texturev.cpp
Sparrow/Src/Render/Tools/VertexLayout/: VertexLayout.cpp
Test/: CMakeLists.txt
Test/Base/: CMakeLists.txt  TestFormat.cpp  TestLog.cpp  TestString.cpp  gtest-extra.h  util.h
Test/Core/: CMakeLists.txt  FBSrtring.cp  TestArrayRef.cp  TestLog.cpp  TestTypeTraits.cpp  TestUtil.cpp
Test/GPU/: CMakeLists.txt  TestOpenGLContext.cpp
Test/GPU/OpenGL/: CMakeLists.txt  TestDemo.cpp
Test/Math/: CMakeLists.txt  TestEigen.cc  TestMatrix.cpp  TestNew.cpp  TestVector.cpp
Test/Render/: CMakeLists.txt  TestRender.cpp
Test/RenderExample/: CMakeLists.txt
Test/RenderExample/00HelloWorld/: CMakeLists.txt  helloworld.cpp
Test/RenderExample/01Cubes/: CMakeLists.txt  Cubes.cpp  Cubes.hpp  Cubes1.cpp  asdfCubes.cpp
(+48 files in other folders)
